Bug 103916 - UI An added / modified gradient (dialog Page Background) is not available in other documents
Summary: UI An added / modified gradient (dialog Page Background) is not available in ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:25.2.0
Keywords: implementationError
: 139908 150894 (view as bug list)
Depends on:
Blocks: Impress-Gradient
  Show dependency treegraph
 
Reported: 2016-11-13 21:07 UTC by Cor Nouws
Modified: 2024-11-13 12:46 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Insert frame>Area>Gradient>Add>Save>Save ODT+Close. Open same ODT> insert frame>Area>Gradient>No saved gradient (183.34 KB, image/jpeg)
2024-11-09 22:59 UTC, saved2serve@gmail.com
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2016-11-13 21:07:11 UTC
Working in presentation, in master page
Setting Page background, Gradient
Modify or Add one
Open new/other presentation and try to apply the same gradient..
It's not available..

In Version: 5.3.0.0.alpha1+
Build ID: 0af30952982767543cddd0b1ce643cb8d5c253a2
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; Layout Engine: new; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-11-11_23:43:27
Locale: nl-NL (nl_NL.UTF-8); Calc: group
Comment 1 Buovjaga 2016-11-24 09:59:38 UTC
Is this something we even want? This behavior does not apply to styles, so why would it apply to backgrounds?
Comment 2 Regina Henschel 2016-11-24 11:46:18 UTC
(In reply to Buovjaga from comment #1)
> Is this something we even want? This behavior does not apply to styles, so
> why would it apply to backgrounds?

If the area dialog is called from a shape and you add a gradient, then this gradient is stored in "standard.sog" in user/config and is available in all other places. There is no reason, why the very same dialog behaves different in case it is called from a page.

I thought it has been one of the goals of the new dialog, that you no longer need to create a dummy shape to add a gradient before you can use it as page background.

It is a bad user experience, if the dialog promises a feature, which it doesn't hold. So for me it is a bug.

Besides that, the gradient which has been defined in the situation of page background and which is applied as background, is no longer available, if you save and reopen the document. So it is not possible to alter an already existing background gradient, for example change the angle or center or gradient steps.
Comment 3 QA Administrators 2017-12-09 11:08:43 UTC Comment hidden (obsolete)
Comment 4 Cor Nouws 2017-12-29 11:31:18 UTC
still an issue in Version: 6.1.0.0.alpha0+
Build ID: a9b202a6b7000e7af34f2a639ca207122a3968bf
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-12-26_23:09:36
Locale: nl-NL (nl_NL.UTF-8); Calc: group threaded
Comment 5 QA Administrators 2019-05-31 02:50:56 UTC Comment hidden (obsolete)
Comment 6 Cor Nouws 2020-02-22 21:20:56 UTC
Similar in Versie: 6.4.0.3
Build ID: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
CPU-threads: 8; Besturingssysteem: Linux 5.3; UI-render: standaard; VCL: gtk3; 
Locale: nl-NL (en_US.UTF-8); UI-taal: nl-NL
Calc: threaded
Comment 7 QA Administrators 2022-02-22 03:46:32 UTC Comment hidden (obsolete)
Comment 8 Cor Nouws 2022-02-27 20:56:03 UTC
Unchanged - still a bug - in 
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 58ac3288b5a4a1f1f9b21fed4f4c1ab06dd43db9
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: nl-NL (en_US.UTF-8); UI: en-GB
Calc: threaded
Comment 9 Buovjaga 2023-01-17 09:52:53 UTC
*** Bug 139908 has been marked as a duplicate of this bug. ***
Comment 10 Buovjaga 2024-09-27 17:51:30 UTC
*** Bug 150894 has been marked as a duplicate of this bug. ***
Comment 11 saved2serve@gmail.com 2024-11-09 22:59:45 UTC
Created attachment 197508 [details]
Insert frame>Area>Gradient>Add>Save>Save ODT+Close. Open same ODT> insert frame>Area>Gradient>No saved gradient

In Version: 24.2.5.2 (X86_64) saved gradients still are not saved pass sessions to be available when reopening the document, not any other. Not found in profile 

But thanks for all that works. Grace and peace thru Jesus the Lord.
Comment 12 Commit Notification 2024-11-13 08:26:27 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6595fcacfa9afb5f09465785aa0c4af46e972ef0

tdf#103916 tdf#163824 cui tparea: always save changed Fill Lists

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.